code commit@Rahul
modification in forms according new theme

--- a/src/main/resources/templates/layouts/Master/program.html
+++ b/src/main/resources/templates/layouts/Master/program.html
@@ -19,92 +19,136 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Program Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Program Master</h3>
+						<!-- Default box -->
+						<div class="box">
+
+
+
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
+
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/program/}" method="POST"
+												th:object="${program}">
+												<div class="box-body">
+
+													<div class="form-group col-md-6">
+														<label>Program Code</label> <input type="text"
+															class="form-control" placeholder="program code"
+															th:field="*{programCode}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label>Program Name</label> <input type="text"
+															class="form-control" placeholder="program name"
+															th:field="*{programName}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label class="form-label">Sub Module Name</label> <label
+															style="color: red">*</label> <select class="form-control"
+															title="Department Name" th:field="*{subModuleMaster}"
+															required>
+															<option value="">Select Sub Module</option>
+															<option th:each="subModule :  ${listSubModule}"
+																th:text="${subModule.subModuleName}"
+																th:value=" ${subModule.subModuleCode}"></option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Program Type</label> <input
+															type="text" class="form-control" placeholder="program type"
+															th:field="*{programType}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Program Href</label> <input
+															type="text" class="form-control" placeholder="program href"
+															th:field="*{programHrefName}">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Sequence Number</label> <input
+															type="text" class="form-control"
+															placeholder="sequence number" th:field="*{seqNo}">
+													</div>
+
+
+													<div class="form-check form-check-inline">
+														<input class="form-check-input" type="radio"
+															name="inlineRadioOptions" id="inlineRadio1" value="Y">
+														<label class="form-check-label"
+															for="inlineRadio1">Active</label>
+													</div>
+
+													<div class="form-check form-check-inline">
+														<input class="form-check-input" type="radio"
+															name="inlineRadioOptions" id="inlineRadio1" value="N">
+														<label class="form-check-label"
+															for="inlineRadio1">In-Active</label>
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/program/list}">View All Program</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
 								</div>
-								<!-- form start -->
-								<form role="form" th:action="@{/program/}" method="POST" th:object="${program}">
-									<div class="box-body">
 
-										<div class="form-group col-md-6">
-											<label>Program Code</label> <input type="text" class="form-control"
-												placeholder="program code" th:field="*{programCode}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label>Program Name</label> <input type="text" class="form-control"
-												placeholder="program name" th:field="*{programName}">
-										</div>
-
-										<div class="form-group col-md-12">
-											<label class="form-label">Sub Module Name</label> <label
-												style="color: red">*</label> <select class="form-control"
-												title="Department Name" th:field="*{subModuleMaster}" required>
-												<option value="">Select Sub Module</option>
-												<option th:each="subModule :  ${listSubModule}"
-													th:text="${subModule.subModuleName}"
-													th:value=" ${subModule.subModuleCode}"></option>
-											</select>
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">Program Type</label> <input type="text"
-												class="form-control" placeholder="program type"
-												th:field="*{programType}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">Program Href</label> <input type="text"
-												class="form-control" placeholder="program href"
-												th:field="*{programHrefName}">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">Sequence Number</label> <input type="text"
-												class="form-control" placeholder="sequence number" th:field="*{seqNo}">
-										</div>
-
-
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="Y"> <label class="form-check-label"
-												for="inlineRadio1">Active</label>
-										</div>
-
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="N"> <label class="form-check-label"
-												for="inlineRadio1">In-Active</label>
-										</div>
-									</div>
-
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
-									<a th:href="@{/program/list}">view program list</a>
-								</form>
 							</div>
+
 						</div>
-
-
-						<div class="col-md-3">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
