--- a/src/main/resources/templates/layouts/Master/StoreMaster.html
+++ b/src/main/resources/templates/layouts/Master/StoreMaster.html
@@ -19,101 +19,142 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Store Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Store Master</h3>
+						<!-- Default box -->
+						<div class="box">
+
+
+
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
+
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/store/}" method="POST" th:object="${store}">
+												<div class="box-body">
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Store Code</label> <input type="text"
+															class="form-control" placeholder="store code"
+															th:field="*{storeCode}">
+													</div>
+													<div class="form-group col-md-12">
+														<label class="form-label">Status</label> <label
+															style="color: red">*</label>
+														<select class="form-control" id="" title="status"
+															th:field="*{storeStatus}" required>
+															<option value="">Select</option>
+
+															<option value="Normal">Normal</option>
+															<option value="Ondate">As On Date</option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-12">
+														<label class="form-label">Type</label> <label
+															style="color: red">*</label>
+														<select class="form-control" id="" title="type"
+															th:field="*{storeType}" required>
+															<option value="">Select</option>
+															<option value="t-1">type-1</option>
+															<option value="t-2">type-2</option>
+														</select>
+													</div>
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Location</label> <input type="text"
+															class="form-control" placeholder="location"
+															th:field="*{location}">
+													</div>
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Description</label> <input type="text"
+															class="form-control" placeholder="description"
+															th:field="*{description}">
+													</div>
+
+													<div class="form-check form-check-inline">
+														<input class="form-check-input" type="radio"
+															name="inlineRadioOptions" id="inlineRadio1" value="Y">
+														<label class="form-check-label"
+															for="inlineRadio1">Active</label>
+													</div>
+
+													<div class="form-check form-check-inline">
+														<input class="form-check-input" type="radio"
+															name="inlineRadioOptions" id="inlineRadio1" value="N">
+														<label class="form-check-label"
+															for="inlineRadio1">In-Active</label>
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/store/list}">View All Store</a>
+
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
 								</div>
-								<!-- form start -->
-								<form role="form" th:action="@{/store/}" method="POST" th:object="${store}">
-									<div class="box-body">
 
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Store Code</label> <input type="text"
-												class="form-control" placeholder="store code" th:field="*{storeCode}">
-										</div>
-										<div class="form-group col-md-12">
-											<label class="form-label">Status</label> <label style="color: red">*</label>
-											<select class="form-control" id="" title="status" th:field="*{storeStatus}"
-												required>
-												<option value="">Select</option>
-
-												<option value="Normal">Normal</option>
-												<option value="Ondate">As On Date</option>
-											</select>
-										</div>
-
-										<div class="form-group col-md-12">
-											<label class="form-label">Type</label> <label style="color: red">*</label>
-											<select class="form-control" id="" title="type" th:field="*{storeType}"
-												required>
-												<option value="">Select</option>
-												<option value="t-1">type-1</option>
-												<option value="t-2">type-2</option>
-											</select>
-										</div>
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Location</label> <input type="text"
-												class="form-control" placeholder="location" th:field="*{location}">
-										</div>
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Description</label> <input type="text"
-												class="form-control" placeholder="description"
-												th:field="*{description}">
-										</div>
-
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="Y"> <label class="form-check-label"
-												for="inlineRadio1">Active</label>
-										</div>
-
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" name="inlineRadioOptions"
-												id="inlineRadio1" value="N"> <label class="form-check-label"
-												for="inlineRadio1">In-Active</label>
-										</div>
-									</div>
-
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
-
-									<a th:href="@{/store/list}">view store list</a>
-
-								</form>
 							</div>
+
 						</div>
-
-
-						<div class="col-md-3">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
         </section>-->
-		<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
 			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
-
 </body>
 
 </html>
