--- a/src/main/resources/templates/layouts/Master/quotationApproval.html
+++ b/src/main/resources/templates/layouts/Master/quotationApproval.html
@@ -1,172 +1,186 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-<head>
-	<title>Title of Home Page</title>
-
-	<th:block id="home-static-resources">
-
-		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
-
-	</th:block>
 
 </head>
 
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 
-	<div id="home-header">eBs</div>
+			<div class="wrapper">
 
-
-	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
-
-	<div id="home-main-content">
-
-		<h5>Quotation Comparitive and Approval</h5>
+				<section class="content-wrapper">
 
 
-		<form th:action="@{/designation/}" method="POST">
-
-
-			<div class="card-body">
-				<form id="validation-form" action="#" method="post">
-
-					<table class="table table-striped table-bordered table-sm" style="width: 100%">
-						<thead>
-							<tr>
-								<th scope="col" class="text-center">Quotation Number</th>
-								<th scope="col" class="text-center">Quotation Date</th>
-								<th scope="col" class="text-center">Quotation Type</th>
-								<th scope="col" class="text-center">Indent Number</th>
-								<th scope="col" class="text-center">Indent Date</th>
-								<th scope="col" class="text-center">Supplier Name</th>
-								<th scope="col" class="text-center">Item Code</th>
-								<th scope="col" class="text-center">Item Quantity</th>
-								<th scope="col" class="text-center">Total Value(INR)</th>
-								<th scope="col" class="text-center">Approval Status</th>
-								<th scope="col" class="text-center">View</th>
-
-							</tr>
-						</thead>
-						<tbody>
-
-							<tr th:each="quotation : ${listQuotationDetail}">
-								<td><label th:text="${quotation.quotNo}"></label></td>
-
-								<td><label th:text="${quotation.quotDate}"></label></td>
-
-								<td><label th:text="${quotation.quotType}"></label></td>
-
-								<td><label th:text="${quotation.indentNu}"></label>
-								</td>
-
-								<td><label th:text="${quotation.indentDate}"></label>
-								</td>
-								<td><label th:text="${quotation.suplierCode}"></label></td>
-
-								<td><label th:text="${quotation.itemCode}"></label></td>
-
-								<td><label>value</label></td>
-
-								<td><label th:text="${quotation.approvalStatus1}">testing</label></td>
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
 
 
 
+							<div class="col-md-12" style="margin-top: 20px;">
 
-
-
-
-								<td class="text-center" th:if="${quotation.approvalStatus1 == 'Y'}">
-									<div class="dropdown show">
-										<a class="btn btn-primary dropdown-toggle" href="#" role="button"
-											id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-											aria-expanded="false"> Approved </a>
-
-										<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
-
-										</div>
+								<div class="box box-primary">
+									<div class="box-header with-border">
+										<h3 class="box-title">Quotation Comparitive and Approval</h3>
 									</div>
-								</td>
-								
-								<td class="text-center" th:if="${quotation.approvalStatus1 == 'N'}">
-									<div class="dropdown show">
-										<a class="btn btn-primary dropdown-toggle" href="#" role="button"
-											id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-											aria-expanded="false"> Pending</a>
+									<!-- form start -->
+									<form id="validation-form" action="#" method="post">
 
-										<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
+										<table class="table table-striped table-bordered table-sm" style="width: 100%">
+											<thead>
+												<tr>
+													<th scope="col" class="text-center">Quotation Number</th>
+													<th scope="col" class="text-center">Quotation Date</th>
+													<th scope="col" class="text-center">Quotation Type</th>
+													<th scope="col" class="text-center">Indent Number</th>
+													<th scope="col" class="text-center">Indent Date</th>
+													<th scope="col" class="text-center">Supplier Name</th>
+													<th scope="col" class="text-center">Item Code</th>
+													<th scope="col" class="text-center">Item Quantity</th>
+													<th scope="col" class="text-center">Total Value(INR)</th>
+													<th scope="col" class="text-center">Approval Status</th>
+													<th scope="col" class="text-center">View</th>
 
-										</div>
-									</div>
-								</td>
-								
-								<td class="text-center" th:if="${quotation.approvalStatus1 == 'C'}">
-									<div class="dropdown show">
-										<a class="btn btn-primary dropdown-toggle" href="#" role="button"
-											id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-											aria-expanded="false"> Cancelled</a>
+												</tr>
+											</thead>
+											<tbody>
 
-										<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
-											<a class="dropdown-item"
-												th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
+												<tr th:each="quotation : ${listQuotationDetail}">
+													<td><label th:text="${quotation.quotNo}"></label></td>
 
-										</div>
-									</div>
-								</td>
+													<td><label th:text="${quotation.quotDate}"></label></td>
 
+													<td><label th:text="${quotation.quotType}"></label></td>
 
+													<td><label th:text="${quotation.indentNu}"></label>
+													</td>
 
+													<td><label th:text="${quotation.indentDate}"></label>
+													</td>
+													<td><label th:text="${quotation.suplierCode}"></label></td>
 
-								<td class="text-center"><a class="btn btn-primary"
-										th:href="@{/approvalquotationdetail/view/{id}/(id=${quotation.quotNo})}">
-										View</a></td>
+													<td><label th:text="${quotation.itemCode}"></label></td>
 
+													<td><label>value</label></td>
 
-							</tr>
-
+													<td><label th:text="${quotation.approvalStatus1}">testing</label>
+													</td>
 
 
 
-						</tbody>
-
-					</table>
 
 
 
-				</form>
+
+													<td class="text-center" th:if="${quotation.approvalStatus1 == 'Y'}">
+														<div class="dropdown show">
+															<a class="btn btn-primary dropdown-toggle" href="#"
+																role="button" id="dropdownMenuLink"
+																data-toggle="dropdown" aria-haspopup="true"
+																aria-expanded="false"> Approved </a>
+
+															<div class="dropdown-menu"
+																aria-labelledby="dropdownMenuLink">
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
+
+															</div>
+														</div>
+													</td>
+
+													<td class="text-center" th:if="${quotation.approvalStatus1 == 'N'}">
+														<div class="dropdown show">
+															<a class="btn btn-primary dropdown-toggle" href="#"
+																role="button" id="dropdownMenuLink"
+																data-toggle="dropdown" aria-haspopup="true"
+																aria-expanded="false"> Pending</a>
+
+															<div class="dropdown-menu"
+																aria-labelledby="dropdownMenuLink">
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
+
+															</div>
+														</div>
+													</td>
+
+													<td class="text-center" th:if="${quotation.approvalStatus1 == 'C'}">
+														<div class="dropdown show">
+															<a class="btn btn-primary dropdown-toggle" href="#"
+																role="button" id="dropdownMenuLink"
+																data-toggle="dropdown" aria-haspopup="true"
+																aria-expanded="false"> Cancelled</a>
+
+															<div class="dropdown-menu"
+																aria-labelledby="dropdownMenuLink">
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'Y'})}">Approved</a>
+																<a class="dropdown-item"
+																	th:href="@{/approvalquotationdetail/{quotNum}/{status}/(quotNum=${quotation.quotNo},status=${'C'})}">Cancel</a>
+
+															</div>
+														</div>
+													</td>
+
+
+
+
+													<td class="text-center"><a class="btn btn-primary"
+															th:href="@{/approvalquotationdetail/view/{id}/(id=${quotation.quotNo})}">
+															View</a></td>
+
+
+												</tr>
+
+
+
+
+											</tbody>
+
+										</table>
+
+
+
+									</form>
+								</div>
+							</div>
+
+
+
+						</div>
+
+					</div>
+				</section>
 			</div>
-		</form>
 
-		<div class="row text-right m-10">
-			<a th:href="@{/designation/list}">view designation list</a>
-		</div>
-	</div>
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
