--- a/src/main/resources/templates/layouts/Master/userMaster.html
+++ b/src/main/resources/templates/layouts/Master/userMaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 
-<head>
+<head xmlns:th="http://www.thymeleaf.org">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
@@ -19,92 +19,128 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							User Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
-							<!-- general form elements -->
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">User Master</h3>
-								</div><!-- /.box-header -->
-								<!-- form start -->
-								<form role="form" th:action="@{/user/}" method="POST" th:object="${user}">
-									<div class="box-body">
+					<!-- Main content -->
+					<section class="content">
 
-										<div class="form-group col-md-12">
-											<label>Employee</label> <label style="color: red">*</label> <select
-												class="form-control" title="state Name" required th:field="*{employee}">
-												<option value="">Select</option>
-												<option th:each="employee :  ${listEmployee}"
-													th:text="${employee.empName}" th:value=" ${employee.empCode}">
-												</option>
-											</select>
-										</div>
-
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">User Code</label> <input type="text"
-												class="form-control" placeholder="district" th:field="*{userCode}">
-										</div>
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">User Name</label> <input type="text"
-												class="form-control" placeholder="city type" th:field="*{userName}">
-										</div>
-
-
-										<div class="form-group col-md-12">
-											<label>User Password</label> <input type="password" class="form-control"
-												placeholder="city code" th:field="*{userPassword}">
-										</div>
-
-										<div class="form-group" style="margin: 10px;">
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="Y"> <label class="form-check-label"
-													for="inlineRadio1">Active</label>
-											</div>
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="N"> <label class="form-check-label"
-													for="inlineRadio1">In-Active</label>
-											</div>
-
-										</div>
+						<!-- Default box -->
+						<div class="box">
 
 
 
-
-
-
-									</div><!-- /.box-body -->
-
-
-									<div class="box-footer" style="margin: 10px">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
 									</div>
-									<a th:href="@{/user/list}">view user list</a>
 
 
-								</form>
-							</div><!-- /.box -->
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/user/}" method="POST" th:object="${user}">
+												<div class="box-body">
+
+													<div class="form-group col-md-12">
+														<label>Employee</label> <label style="color: red">*</label>
+														<select class="form-control" title="state Name" required
+															th:field="*{employee}">
+															<option value="">Select</option>
+															<option th:each="employee :  ${listEmployee}"
+																th:text="${employee.empName}"
+																th:value=" ${employee.empCode}">
+															</option>
+														</select>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">User Code</label> <input type="text"
+															class="form-control" placeholder="district"
+															th:field="*{userCode}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">User Name</label> <input type="text"
+															class="form-control" placeholder="city type"
+															th:field="*{userName}">
+													</div>
+
+
+													<div class="form-group col-md-12">
+														<label>User Password</label> <input type="password"
+															class="form-control" placeholder="city code"
+															th:field="*{userPassword}">
+													</div>
+
+
+
+													<div class="form-group" style="margin: 10px;">
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="Y">
+															<label class="form-check-label"
+																for="inlineRadio1">Active</label>
+														</div>
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="N">
+															<label class="form-check-label"
+																for="inlineRadio1">In-Active</label>
+														</div>
+
+													</div>
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/user/list}">View All User</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
+								</div>
+
+							</div>
+
 						</div>
-
-
-						<div class="col-md-3">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
