--- a/src/main/resources/templates/layouts/editview/editFinancialActiveYear.html
+++ b/src/main/resources/templates/layouts/editview/editFinancialActiveYear.html
@@ -14,110 +14,150 @@
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini" onload="changeUserCode()">
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-2">
-						</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Financial Active Year
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-8" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Financial Active year</h3>
+						<!-- Default box -->
+						<div class="box">
+
+
+
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
+									</div>
+
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/financialactiveyear/}" method="POST"
+												th:object="${financialActiveYear}">
+												<div class="box-body">
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">User</label> <select
+															class="form-control" id="userCode" th:field="*{myUser}"
+															onchange="changeUserCode()" title="user code" required>
+															<option value="">Select User</option>
+															<option th:each="user :  ${listMyUser}"
+																th:text="${user.userCode}" th:value=" ${user.userCode}">
+															</option>
+														</select>
+													</div>
+
+
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">User Name</label> <input type="text"
+															class="form-control" placeholder="from date" id="userName">
+													</div>
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">FinancialYear</label> <select
+															class="form-control" id="financialYear" onchange=""
+															title="Financial year" required th:field="*{financialYear}">
+															<option value="">Select Financial year</option>
+															<option th:each="financialYear :  ${listFinancialyear}"
+																th:text="${financialYear.financialYearCode}"
+																th:value=" ${financialYear.id}"></option>
+														</select>
+													</div>
+
+
+
+
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">Select Company</label> <select
+															class="form-control" id="company" th:field="*{company}"
+															onchange="changeUserCode()" title="compnay" required>
+															<option value="">Select</option>
+															<option th:each="company :  ${listCompany}"
+																th:text="${company.compName}"
+																th:value=" ${company.compCode}"></option>
+														</select>
+													</div>
+
+
+
+													<div class="form-group" style="margin: 10px;">
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="Y">
+															<label class="form-check-label"
+																for="inlineRadio1">Active</label>
+														</div>
+
+														<div class="form-check form-check-inline">
+															<input class="form-check-input" type="radio"
+																name="inlineRadioOptions" id="inlineRadio1" value="N">
+															<label class="form-check-label"
+																for="inlineRadio1">In-Active</label>
+														</div>
+
+
+
+													</div>
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/financialactiveyear/list}">View All Active Financial Year</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
 								</div>
-								<!-- form start -->
-								<form role="form" th:action="@{/financialactiveyear/}" method="POST"
-									th:object="${financialActiveYear}">
-									<div class="box-body">
 
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">User</label> <select class="form-control"
-												id="userCode" th:field="*{myUser}" onchange="changeUserCode()"
-												title="user code" required>
-												<option value="">Select User</option>
-												<option th:each="user :  ${listMyUser}" th:text="${user.userCode}"
-													th:value=" ${user.userCode}"></option>
-											</select>
-										</div>
-
-
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">User Name</label> <input type="text"
-												class="form-control" placeholder="user name" id="userName">
-										</div>
-
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">FinancialYear</label> <select class="form-control"
-												id="financialYear" onchange="" title="Financial year" required th:field="*{financialYear}">
-												<option value="">Select Financial year</option>
-												<option th:each="financialY :  ${listFinancialyear}"
-													th:text="${financialY.financialYearCode}"
-													th:value=" ${financialY.id}"></option>
-											</select>
-										</div>
-										
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Select Company</label> <select class="form-control"
-												id="company" th:field="*{company}" onchange="changeUserCode()"
-												title="compnay" required>
-												<option value="">Select</option>
-												<option th:each="company :  ${listCompany}" th:text="${company.compName}"
-													th:value=" ${company.compCode}"></option>
-											</select>
-										</div>
-
-
-
-										<div class="form-group" style="margin: 10px;">
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="Y"> <label class="form-check-label"
-													for="inlineRadio1">Active</label>
-											</div>
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="N"> <label class="form-check-label"
-													for="inlineRadio1">In-Active</label>
-											</div>
-
-
-
-										</div>
-									</div>
-
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
-									<a th:href="@{/financialactiveyear/list}">view financial year list</a>
-
-
-								</form>
 							</div>
+
 						</div>
-
-
-						<div class="col-md-2">
-						</div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
-        
-        </section>-->
 
 
 
@@ -129,6 +169,11 @@
 				}
 
 			</script>
+
+
+			<!--   <section class="content">
+        
+        </section>-->
 			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
