--- a/src/main/resources/templates/layouts/editview/editFinancialyear.html
+++ b/src/main/resources/templates/layouts/editview/editFinancialyear.html
@@ -2,7 +2,6 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-<meta charset="utf-8">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
@@ -25,26 +24,47 @@
 
 				<section class="content-wrapper">
 
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							Financial Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
-					<div class="row">
-						<!-- left column -->
-						<div class="col-md-12">
-							<div class="col-md-3">
-							</div>
+
+					<!-- Main content -->
+					<section class="content">
+
+						<!-- Default box -->
+						<div class="box">
 
 
-							<div class="col-md-6" style="margin-top: 20px;">
 
-								<div class="box box-primary">
-									<div class="box-header with-border">
-										<h3 class="box-title">Financial Year</h3>
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2">
 									</div>
-									<!-- form start -->
-									<form role="form" th:action="@{/financialyear/}" method="POST"
-										th:object="${financialYear}">
-										<div class="box-body">
 
-											<div class="form-group col-md-12">
+
+									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div><!-- /.box-header -->
+											<!-- form start -->
+											<form role="form" th:action="@{/financialyear/}" method="POST"
+												th:object="${financialYear}">
+												<div class="box-body">
+
+													<div class="form-group col-md-12">
 												<label for="inputEmail4">Financial Year Code</label> <input type="text"
 													class="form-control" placeholder="financial year code"
 													th:field="*{financialYearCode}">
@@ -63,30 +83,51 @@
 													id="inlineRadio1" value="Y"> <label class="form-check-label"
 													for="inlineRadio1">Active</label>
 											</div>
-
+											
 											<div class="form-check form-check-inline">
 												<input class="form-check-input" type="radio" name="inlineRadioOptions"
 													id="inlineRadio1" value="N"> <label class="form-check-label"
 													for="inlineRadio1">In-Active</label>
 											</div>
-										</div>
+													
 
-										<div class="box-footer">
-											<input type="submit" value="Submit" class="btn btn-primary" />
-											<input type="reset" value="Reset" class="btn btn-danger" />
-										</div>
-										<a th:href="@{/financialyear/list}">view financial year list</a>
+													
 
-									</form>
+
+													
+
+												
+
+													
+
+													
+
+												</div><!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
+
+										</div><!-- /.box -->
+										<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/financialyear/list}">View All Financial Year</a>
+										</div>
+									</div>
+
+
+									<div class="col-md-2">
+									</div>
 								</div>
+
 							</div>
 
-
-							<div class="col-md-3">
-							</div>
 						</div>
-
-					</div>
+					</section>
 				</section>
 			</div>
 
